# editor

./: README.md  default.nix  editor.cabal  package.nix  shell.nix  yi.json
src/: Main.hs
src/Editor/: ExCommands.hs  KeymapSet.hs  Theme.hs
src/Editor/Formatters/: Haskell.hs  RemoveNewlines.hs
src/Editor/Modes/: Haskell.hs
