name:           editor
version:        0.0.1
category:       None
maintainer:     Brad Parker <bradsparker@gmail.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

executable yi
  main-is:
    Main.hs
  hs-source-dirs:
    ./src
  ghc-options:
    -Wall -ferror-spans -threaded
  build-depends:
      base >= 4.8 && < 5
    , bytestring
    , hindent
    , microlens-platform
    , mtl
    , text
    , yi-core
    , yi-frontend-vty
    , yi-fuzzy-open
    , yi-keymap-vim
    , yi-misc-modes
    , yi-mode-haskell
    , yi-mode-javascript
    , yi-rope
  default-language:
    Haskell2010
  other-modules:
    Editor.Formatters.Haskell
    Editor.Theme
    Editor.KeymapSet
